# gameoflife-cuda

./: CMakeLists.txt  README.md  gpu.cu  gpu.cuh  main.cpp  objects.cpp  objects.hpp  old.txt  windows.cpp  windows.hpp
cmake/: FindCUDNN.cmake
imgui/: CMakeLists.txt
